--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,23 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+
+Because I could not stop for Death –  
+He kindly stopped for me –  
+The Carriage held but just Ourselves –  
+And Immortality.  
+
+We slowly drove – He knew no haste  
+And I had put away  
+My labor and my leisure too,  
+For His Civility –  
+
+We passed the School, where Children strove  
+At Recess – in the Ring –  
+We passed the Fields of Gazing Grain –  
+We passed the Setting Sun –  
+
+Or rather – He passed Us –  
+The Dews drew quivering and Chill –  
+For only Gossamer, my Gown –  
+My Tippet – only Tulle –  
